--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 ZwaveSensorLogger.indigoPlugin/Contents/Server Plugin/plugin2(0).py
 ZwaveSensorLogger.indigoPlugin/Contents/Server Plugin/plugin2.py
-*log*
+*.log
 *zip*
 *doc*
 *lnk*
